convert to only use camel pipeline

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <version.wildfly.arquillian>1.0.2.Final</version.wildfly.arquillian>
 
         <!-- Other versions -->
-        <version.apache.camel>2.19.2</version.apache.camel>
+        <version.apache.camel>2.17.0</version.apache.camel>
         <version.arquillian.universe>1.1.13.5</version.arquillian.universe>
         <version.arquillian>1.8.0</version.arquillian>
         <version.restassured>3.0.0</version.restassured>
@@ -141,7 +141,15 @@
             <version>${version.restassured}</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+
+        <!-- EXTRAS -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jetty</artifactId>
+            <version>${version.apache.camel}</version>
+        </dependency>
+
+</dependencies>
 
     <!-- Build-->
     <build>
